# mqtt-kafka-connector

./: .bandit  .editorconfig  .env.docker  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build_push_image.yml  tests.yml
connector/: .env.example  __init__.py  conf.py  main.py  send.py  utils.py
connector/clients/: base_http.py  schema_client.py
src/mqtt_kafka_connector/: __init__.py  conf.py  context_vars.py  utils.py
src/mqtt_kafka_connector/clients/: base_http.py  kafka.py  mqtt.py  schema_client.py
src/mqtt_kafka_connector/connector/: __init__.py  main.py  ping.py
src/mqtt_kafka_connector/emu/: __init__.py  main.py  test.cfg
src/mqtt_kafka_connector/services/: prometheus.py
tests/: conftest.py  riros.py  test_avro.py  test_clients.py  test_connector.py  test_kafka_client.py  test_mqtt_client.py  test_schema_client.py  test_sender.py  test_utils.py
