[project]
# Support Python 3.10+.
requires-python = '>=3.10'

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = [
    '-p', 'no:warnings'
]
plugins = [
    'pytest_asyncio',
    'pytest_mock',
]
asyncio_mode = 'auto'
pythonpath = ['src']
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::*PytestCollectionWarning*'
]
tests_require = [
    'develop'
]


[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 89


[tool.ruff]
line-length = 79
exclude = [
    '.git',
    '.gitignore',
    '*.pot',
    '*.py[co]',
    '__pycache__',
    'venv',
    '.env',
    '.venv',
    'versions',
    'static',
    'media',
    'node_modules',
    'src/emulate'
]

[tool.ruff.lint]
extend-select = ['I', 'E', 'W', 'F']
[tool.ruff.format]
quote-style = 'single'
